--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
   <body>
     <h1>GitHub 入門</h1>
     <h2>演習で自由に編集してください</h2>
+    //足し算用の関数 add
+    function add(){
+    }
+    
+    //引き算用の関数 sub
+    function sub(){  
+    }
 
     <!-- 変更箇所に困ったら下記のコメントアウトを外してください -->
     <!--<div id="target">ここをクリックするとアラート発生</div>-->
