A1 add fanc add

--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
     <h2>演習で自由に編集してください</h2>
     //足し算用の関数 add
     function add(){
+      eqlNum.value = parseFloat(midNum[0].value) + parseFloat(midNum[1].value);
     }
-    
+
     //引き算用の関数 sub
     function sub(){  
     }
